[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/BuildItem.gd" type="Script" id=1]

[node name="BuildItem" type="Button"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Rect" ]
required_item_types = null
required_item_quantities = null
placement_resource = null
build_resource = null
hotkey = null

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_BuildItem_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_BuildItem_mouse_exited"]

[connection signal="pressed" from="." to="." method="_on_BuildItem_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


